[workspace]
members = [
    "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[toolchain]
channel = "1.18.12"
components = ["rustfmt", "clippy"]
targets = ["bpf"]
