[package]
name = "hoe-dex-protection"
version = "0.1.0"
description = "DEX protection program for HOE token"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "hoe_dex_protection"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "=0.29.0"
solana-program = "=1.16.13"
spl-token = { version = "=4.0.2", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "=2.2.0", features = ["no-entrypoint"] }
spl-memo = { version = "=4.0.3", features = ["no-entrypoint"] }

[dev-dependencies]
solana-program-test = "=1.16.13"
solana-sdk = "=1.16.13"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
