[package]
name = "hoe-dex-protection"
version = "0.1.0"
description = "DEX protection program for HOE token"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "hoe_dex_protection"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.0"
anchor-spl = "0.31.0"
spl-token = { version = "7.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "6.0.0", features = ["no-entrypoint"] }
spl-memo = { version = "6.0.0", features = ["no-entrypoint"] }

[dev-dependencies]
solana-program-test = "=2.1.0"
solana-sdk = "=2.1.0"
